finishing wishlist controller and endpoint
